refactor: Use .toList over .collect(Collectors.toList())